--- a/compose.yml
+++ b/compose.yml
@@ -1,28 +1,28 @@
 services:
+  db-events:
+    image: postgres:16
+    environment:
+      - POSTGRES_DB=eventsdb
+      - POSTGRES_USER=myuser
+      - POSTGRES_PASSWORD=mypassword
+    ports:
+      - "5432:5432"
+    volumes:
+      - events-db-data:/var/lib/postgresql/data
+
   backend:
     image: node:latest
     working_dir: /app
     volumes:
       - ./backend:/app
     environment:
-      - DATABASE_URL=postgresql://myuser:mypassword@db-projet:5432/mydatabase
-      - JWT_SECRET=your_jwt_secret_key
+      - DATABASE_URL=postgresql://myuser:mypassword@db-events:5432/eventsdb
+      - JWT_SECRET=super_secret
     ports:
       - "3000:3000"
     command: sh -c "npm install && npm run dev"
-    ## Si --watch ne fonctionne pas sur votre système, utilisez nodemon
-    #command: sh -c "npm install && npm run dev:nodemon"
     depends_on:
-      - db-projet
-
-  db-projet:
-    image: postgres:16-alpine
-    environment:
-      - POSTGRES_USER=myuser
-      - POSTGRES_PASSWORD=mypassword
-      - POSTGRES_DB=mydatabase
-    volumes:
-      - projet-db-data:/var/lib/postgresql/data
+      - db-events
 
   frontend:
     image: node:latest
@@ -31,11 +31,11 @@ services:
       - ./frontend:/app
     environment:
       - VITE_API_URL=http://localhost:3000
-    depends_on:
-      - backend
     ports:
       - "5173:5173"
     command: sh -c "npm install && npm run dev"
+    depends_on:
+      - backend
 
 volumes:
-  projet-db-data:
+  events-db-data:
