--- a/compose.yml
+++ b/compose.yml
@@ -29,6 +29,7 @@ services:
     working_dir: /app
     volumes:
       - ./frontend:/app
+      - /app/node_modules
     environment:
       - VITE_API_URL=http://localhost:3000
     ports:
